# ManifoldDMC

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  imgui.ini
Data-and-Results/: README.md
LazyEngine/: .gitignore  CMakeLists.txt  LICENCE.txt  Readme.md
LazyEngine/LazyEngine/: CMakeLists.txt
LazyEngine/LazyEngine/src/LazyEngine/: LazyEngine.h  gepch.cpp  gepch.h
LazyEngine/LazyEngine/src/LazyEngine/Core/: Application.cpp  Application.h  Constants.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Time.cpp  Time.h  Util.h  Window.cpp  Window.h
LazyEngine/LazyEngine/src/LazyEngine/Core/Input/: Gamepad.cpp  Gamepad.h  GamepadCodes.h  Input.cpp  Input.h  KeyCodes.h  MouseButtonCodes.h
LazyEngine/LazyEngine/src/LazyEngine/Events/: ApplicationEvent.h  Event.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h
LazyEngine/LazyEngine/src/LazyEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.inl  ImGuiViewport.cpp  ImGuiViewport.h
LazyEngine/LazyEngine/src/LazyEngine/Other/: CameraController.cpp  CameraController.h  OrthographicController.cpp  OrthographicController.h  PerspectiveController.cpp  PerspectiveController.h
LazyEngine/LazyEngine/src/LazyEngine/Profiling/: Profiler.cpp  Profiler.h  Timer.cpp  Timer.h
LazyEngine/LazyEngine/src/LazyEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer2DImpl.cpp  Renderer2DImpl.h  RendererAPI.cpp  RendererAPI.h  RendererImpl.cpp  RendererImpl.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  VertexArray.cpp  VertexArray.h
LazyEngine/LazyEngine/src/LazyEngine/Renderer/Geometry/: GeometricPrimitives.cpp  GeometricPrimitives.h  Object3D.cpp  Object3D.h
LazyEngine/LazyEngine/src/LazyEngine/Renderer/Materials/: BillboardMaterial.cpp  BillboardMaterial.h  Colors.h  Material.h  PhongMaterial.cpp  PhongMaterial.h
LazyEngine/LazyEngine/src/LazyEngine/platform/CUDA/: CUDAGLInteroperabilty.cu  CUDAGLInteroperabilty.h  CUDAUtils.cu  CUDAUtils.h
LazyEngine/LazyEngine/src/LazyEngine/platform/GLFW/: GLFWGamepad.cpp  GLFWGamepad.h  GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
LazyEngine/LazyEngine/src/LazyEngine/platform/Linux/: LinuxGamepad.cpp  LinuxGamepad.h  LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
LazyEngine/LazyEngine/src/LazyEngine/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
LazyEngine/LazyEngine/src/LazyEngine/platform/Windows/: WindowsGamepad.cpp  WindowsGamepad.h  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
MarchingCubes/: CMakeLists.txt
MarchingCubes/OriginalDMC/: CMakeLists.txt
MarchingCubes/OriginalDMC/src/: CellIntersection.h  DualMarchingCubes.cu  kernel.cu
MarchingCubes/VisualDMC/: CMakeLists.txt
MarchingCubes/VisualDMC/assets/shaders/: 2DShader.glsl  ExampleShader.glsl  Texture.glsl  quadOutlinesShader.glsl  superSimpleShader.glsl
MarchingCubes/VisualDMC/src/: LayerCUDA.cpp  LayerCUDA.cu  LayerCUDA.h  Selection.cu  Selection.h  VisualDMCApp.cpp
MarchingCubes/VisualDMC/src/DMC/: CellIntersection.h  CellIntersection.inl  DeviceHashTables.cu  DeviceHashTables.h  DeviceVectors.cu  DeviceVectors.h  DualMarchingCubes.cpp  DualMarchingCubes.cu  DualMarchingCubes.h  Mesh.cu  Mesh.h  UniformGrid.h  UniformGrid.inl
MarchingCubes/VisualDMC/src/DMC/Halfedges/: Halfedge.h  HalfedgeHashTables.cu  HalfedgeHashTables.h  HalfedgeMesh.cu  HalfedgeMesh.h  HalfedgeVectors.cu  HalfedgeVectors.h
MarchingCubes/VisualDMC/src/DMC/PostProcesses/: ManifoldCreator.cpp  ManifoldCreator.cu  ManifoldCreator.h  ManifoldSplitter.cu  ManifoldSplitter.h
MarchingCubes/VisualDMC/src/DMC/Utils/: AsymptoticDecider.h  Interpolation.h  Interpolation.inl  Intersections.cu  Intersections.h  Intersections.inl  Utilities.cpp  Utilities.h
